--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=ursacore
 logging.level.com.ursacore=debug
-# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
