Updated app config for local MySQL

--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -5,6 +5,18 @@ spring.jpa.database=mysql
 spring.datasource.driver-class.name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.hikari.pool-name=UrsaDB-MySQL-Pool
+spring.datasource.hikari.maximum-pool-size=4
+spring.datasource.hikari.datasource-properties.cachePrepStmts=true
+spring.datasource.hikari.datasource-properties.prepStmtCacheSize=256
+spring.datasource.hikari.datasource-properties.prepStmtCacheSqlLimit=2048
+spring.datasource.hikari.datasource-properties.useServerPrepStmts=true
+spring.datasource.hikari.datasource-properties.useLocalSessionState=true
+spring.datasource.hikari.datasource-properties.rewriteBatchedStatements=true
+spring.datasource.hikari.datasource-properties.cacheResultSetMetadata=true
+spring.datasource.hikari.datasource-properties.cacheServerConfiguration=true
+spring.datasource.hikari.datasource-properties.elideSetAutoCommits=true
+spring.datasource.hikari.datasource-properties.maintainTimeStats=false
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.orm.jdbc.bind=trace
