--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -1,3 +1,4 @@
+spring.docker.compose.enabled=true
 spring.datasource.username=ursadba
 spring.datasource.password=password
 spring.datasource.url=jdbc:mysql://localhost:3306/ursadb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
