Added CSV service for patient, updated schemas, and Patient DTO/Entity

--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -1,6 +1,6 @@
 spring.docker.compose.enabled=true
-spring.datasource.username=ursadba
-spring.datasource.password=password
+spring.datasource.username=testdba
+spring.datasource.password=userpass
 spring.datasource.url=jdbc:mysql://localhost:3306/ursadb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.jpa.database=mysql
 spring.datasource.driver-class.name=com.mysql.cj.jdbc.Driver
