--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -19,6 +19,6 @@ spring.datasource.hikari.datasource-properties.cacheResultSetMetadata=true
 spring.datasource.hikari.datasource-properties.cacheServerConfiguration=true
 spring.datasource.hikari.datasource-properties.elideSetAutoCommits=true
 spring.datasource.hikari.datasource-properties.maintainTimeStats=false
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.orm.jdbc.bind=trace
+# spring.jpa.properties.hibernate.show_sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# logging.level.org.hibernate.orm.jdbc.bind=trace
