--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=ursacore
-logging.level.com.ursacore=debug
 spring.jpa.hibernate.ddl-auto=update
 spring.flyway.enabled=false
 spring.docker.compose.enabled=false
+
+logging.level.com.ursacore=debug
+spring.jpa.properties.hibernate.show_sql=false
+
 # spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
 # spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-and-create.sql
 # spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=drop-and-create.sql
